mutants.out/log/toml-pretty-deser-macros__src__lib.rs_line_207_col_13.log

*** toml-pretty-deser-macros/src/lib.rs:207:13: delete match arm Fields::Named(fields) in make_partial

*** mutation diff:
--- toml-pretty-deser-macros/src/lib.rs
+++ delete match arm Fields::Named(fields) in make_partial
@@ -199,17 +199,17 @@
 
     let struct_name = &input.ident;
     let partial_name = format_ident!("Partial{}", struct_name);
     let generics = &input.generics;
     let (impl_generics, ty_generics, where_clause) = generics.split_for_impl();
 
     let fields = match &input.data {
         Data::Struct(data) => match &data.fields {
-            Fields::Named(fields) => &fields.named,
+             /* ~ changed by cargo-mutants ~ */
             _ => panic!("make_partial only supports structs with named fields"),
         },
         _ => panic!("make_partial only supports structs"),
     };
 
     // Create a version of the input struct with #[nested], #[as_enum], and #[alias(...)] attributes stripped
     let mut cleaned_input = input.clone();
     if let Data::Struct(ref mut data) = cleaned_input.data {


*** /nix/store/826jircl576xphx7a459njgqfmcbd4x5-cargo-1.95.0-nightly-2026-01-21-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=toml-pretty-deser-macros@0.1.0
       Fresh unicode-ident v1.0.22
       Fresh proc-macro2 v1.0.106
       Fresh quote v1.0.44
       Fresh syn v2.0.114
       Dirty toml-pretty-deser-macros v0.1.0 (/tmp/nix-shell.fWA0aw/cargo-mutants-toml-pretty-deser-Ha55Kf.tmp/toml-pretty-deser-macros): the file `toml-pretty-deser-macros/src/lib.rs` has changed (1770035346.352701056s, 184992059ns after last build at 1770035346.167708997s)
   Compiling toml-pretty-deser-macros v0.1.0 (/tmp/nix-shell.fWA0aw/cargo-mutants-toml-pretty-deser-Ha55Kf.tmp/toml-pretty-deser-macros)
     Running `rustc --crate-name toml_pretty_deser_macros --edition=2024 toml-pretty-deser-macros/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type proc-macro --emit=dep-info,link -C prefer-dynamic -C embed-bitcode=no --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=81120a598c00f9fa -C extra-filename=-f792c9db6a0b2842 --out-dir /home/finkernagel/.cache/cargo/target/debug/deps -C incremental=/home/finkernagel/.cache/cargo/target/debug/incremental -L dependency=/home/finkernagel/.cache/cargo/target/debug/deps --extern proc_macro2=/home/finkernagel/.cache/cargo/target/debug/deps/libproc_macro2-3b81e34eea8b22ad.rlib --extern quote=/home/finkernagel/.cache/cargo/target/debug/deps/libquote-17bdff8842b26ed8.rlib --extern syn=/home/finkernagel/.cache/cargo/target/debug/deps/libsyn-2ef69c79628e106e.rlib --extern proc_macro -C link-arg=-fuse-ld=mold`
     Running `rustc --crate-name toml_pretty_deser_macros --edition=2024 toml-pretty-deser-macros/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C prefer-dynamic -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=dff9d6b74d3ad59d -C extra-filename=-54b992e04b4c4902 --out-dir /home/finkernagel/.cache/cargo/target/debug/deps -C incremental=/home/finkernagel/.cache/cargo/target/debug/incremental -L dependency=/home/finkernagel/.cache/cargo/target/debug/deps --extern proc_macro2=/home/finkernagel/.cache/cargo/target/debug/deps/libproc_macro2-3b81e34eea8b22ad.rlib --extern quote=/home/finkernagel/.cache/cargo/target/debug/deps/libquote-17bdff8842b26ed8.rlib --extern syn=/home/finkernagel/.cache/cargo/target/debug/deps/libsyn-2ef69c79628e106e.rlib --extern proc_macro -C link-arg=-fuse-ld=mold`
warning: unreachable statement
   --> toml-pretty-deser-macros/src/lib.rs:214:5
    |
205 |       let fields = match &input.data {
    |  __________________-
206 | |         Data::Struct(data) => match &data.fields {
207 | |              /* ~ changed by cargo-mutants ~ */
208 | |             _ => panic!("make_partial only supports structs with named fields"),
209 | |         },
210 | |         _ => panic!("make_partial only supports structs"),
211 | |     };
    | |_____- any code following this `match` expression is unreachable, as all arms diverge
...
214 |       let mut cleaned_input = input.clone();
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
    |
    = note: `#[warn(unreachable_code)]` (part of `#[warn(unused)]`) on by default

error[E0282]: type annotations needed
   --> toml-pretty-deser-macros/src/lib.rs:205:9
    |
205 |     let fields = match &input.data {
    |         ^^^^^^
...
228 |     for f in fields.iter() {
    |              ------ type must be known at this point
    |
help: consider giving `fields` an explicit type
    |
205 |     let fields: /* Type */ = match &input.data {
    |               ++++++++++++

error[E0282]: type annotations needed
   --> toml-pretty-deser-macros/src/lib.rs:437:20
    |
437 |       let expanded = quote! {
    |  ____________________^
438 | |         #cleaned_input
439 | |
440 | |         #[derive(Debug)]
...   |
475 | |         #generate_verify_impl
476 | |     };
    | |_____^ cannot infer type
    |
    = note: this error originates in the macro `$crate::quote_bind_next_or_break` which comes from the expansion of the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0282`.
warning: `toml-pretty-deser-macros` (lib test) generated 1 warning (1 duplicate)
error: could not compile `toml-pretty-deser-macros` (lib test) due to 6 previous errors; 1 warning emitted

Caused by:
  process didn't exit successfully: `rustc --crate-name toml_pretty_deser_macros --edition=2024 toml-pretty-deser-macros/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C prefer-dynamic -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=dff9d6b74d3ad59d -C extra-filename=-54b992e04b4c4902 --out-dir /home/finkernagel/.cache/cargo/target/debug/deps -C incremental=/home/finkernagel/.cache/cargo/target/debug/incremental -L dependency=/home/finkernagel/.cache/cargo/target/debug/deps --extern proc_macro2=/home/finkernagel/.cache/cargo/target/debug/deps/libproc_macro2-3b81e34eea8b22ad.rlib --extern quote=/home/finkernagel/.cache/cargo/target/debug/deps/libquote-17bdff8842b26ed8.rlib --extern syn=/home/finkernagel/.cache/cargo/target/debug/deps/libsyn-2ef69c79628e106e.rlib --extern proc_macro -C link-arg=-fuse-ld=mold` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `toml-pretty-deser-macros` (lib) generated 1 warning
error: could not compile `toml-pretty-deser-macros` (lib) due to 6 previous errors; 1 warning emitted

Caused by:
  process didn't exit successfully: `rustc --crate-name toml_pretty_deser_macros --edition=2024 toml-pretty-deser-macros/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type proc-macro --emit=dep-info,link -C prefer-dynamic -C embed-bitcode=no --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=81120a598c00f9fa -C extra-filename=-f792c9db6a0b2842 --out-dir /home/finkernagel/.cache/cargo/target/debug/deps -C incremental=/home/finkernagel/.cache/cargo/target/debug/incremental -L dependency=/home/finkernagel/.cache/cargo/target/debug/deps --extern proc_macro2=/home/finkernagel/.cache/cargo/target/debug/deps/libproc_macro2-3b81e34eea8b22ad.rlib --extern quote=/home/finkernagel/.cache/cargo/target/debug/deps/libquote-17bdff8842b26ed8.rlib --extern syn=/home/finkernagel/.cache/cargo/target/debug/deps/libsyn-2ef69c79628e106e.rlib --extern proc_macro -C link-arg=-fuse-ld=mold` (exit status: 1)

*** result: Failure(101)
